// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Returns responsive values 1`] = `
Object {
  "@media screen and (min-width: 40em)": Object {
    "textAlign": "left",
  },
  "textAlign": "center",
}
`;

exports[`Returns single value 1`] = `
Object {
  "textAlign": "center",
}
`;
